--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.1'
     implementation 'com.google.firebase:firebase-auth:21.0.7'
     implementation 'com.google.firebase:firebase-bom:30.3.2'
+    implementation 'androidx.room:room-common:2.4.3'
+    implementation 'androidx.room:room-runtime:2.4.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    implementation 'android.arch.persistence.room:runtime:1.1.1'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
-    testImplementation 'android.arch.persistence.room:testing:1.1.1'
+    annotationProcessor 'androidx.room:room-compiler:2.4.3'
 }
